--- a/src/main/resources/views/gestionCuotas.fxml
+++ b/src/main/resources/views/gestionCuotas.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
@@ -7,7 +12,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="604.0" prefWidth="883.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.proyecto.controller.GestionCuotasController">
+<AnchorPane prefHeight="604.0" prefWidth="883.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.proyecto.controller.GestionCuotasController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#6190bc" height="58.0" layoutX="-10.0" layoutY="-4.0" stroke="BLACK" strokeType="INSIDE" width="903.0" />
       <Label layoutX="14.0" layoutY="14.0" text="Página de Préstamos - Don Pepe Empresas" textFill="WHITE">
@@ -20,15 +25,21 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <ListView fx:id="listViewCuotas" layoutX="26.0" layoutY="111.0" onMouseClicked="#select" prefHeight="401.0" prefWidth="400.0" />
+      <ListView fx:id="listViewCuotas" layoutX="26.0" layoutY="111.0" onMouseClicked="#select" prefHeight="195.0" prefWidth="400.0" />
       <Button fx:id="btnAtras" layoutX="804.0" layoutY="536.0" mnemonicParsing="false" onAction="#atras" text="Atrás" />
       <Button fx:id="btnPagarCuota" layoutX="382.0" layoutY="536.0" mnemonicParsing="false" onAction="#pagarCuota" text="Pagar Cuota" />
-      <Label layoutX="45.0" layoutY="78.0" text="Cuotas ">
+      <Label layoutX="45.0" layoutY="78.0" text="Prestamos">
          <font>
             <Font size="14.0" />
          </font>
       </Label>
       <Label layoutX="463.0" layoutY="149.0" text="La información de la cuota aparecerá acá abajo:" />
       <Label fx:id="lblInfoCuota" layoutX="463.0" layoutY="198.0" prefHeight="175.0" prefWidth="316.0" text="." />
+      <Label layoutX="45.0" layoutY="321.0" text="Cuotas ">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Label>
+      <ListView fx:id="listViewCuotasPagadas" layoutX="26.0" layoutY="351.0" prefHeight="152.0" prefWidth="400.0" />
    </children>
 </AnchorPane>
