--- a/src/main/resources/views/paginaPrincipal.fxml
+++ b/src/main/resources/views/paginaPrincipal.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="457.0" prefWidth="671.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.proyecto.controller.PaginaPrincipalController">
+<AnchorPane prefHeight="457.0" prefWidth="671.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.proyecto.controller.PaginaPrincipalController">
    <children>
       <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#6190bc" height="58.0" layoutX="-10.0" layoutY="-4.0" stroke="BLACK" strokeType="INSIDE" width="732.0" />
       <Label layoutX="14.0" layoutY="14.0" text="Página de Préstamos - Don Pepe Empresas" textFill="WHITE">
@@ -101,5 +101,6 @@
          </children>
       </HBox>
       <Button fx:id="btnCerrarSesion" layoutX="25.0" layoutY="411.0" mnemonicParsing="false" onAction="#cerrarSesion" text="Cerrar Sesión" />
+      <Button fx:id="btnAyuda" layoutX="647.0" layoutY="411.0" mnemonicParsing="false" onAction="#abrirAyuda" text="Ayuda" />
    </children>
 </AnchorPane>
