--- a/src/main/resources/views/menuAyuda.fxml
+++ b/src/main/resources/views/menuAyuda.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="707.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="670.0" prefWidth="707.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.proyecto.controller.AyudaController">
    <children>
       <Label layoutX="14.0" prefHeight="90.0" prefWidth="551.0" text="Sección de Ayuda: Gestión de Préstamos¡Bienvenido a la guía de uso de la aplicación de préstamos! Aquí te explicamos cómo realizar cada acción de forma sencilla utilizando los botones disponibles en la aplicación." wrapText="true" />
       <Label layoutX="28.0" layoutY="90.0" prefHeight="209.0" prefWidth="287.0" text="1. Crear una Solicitud de PréstamoSelecciona el botón &quot;Crear Solicitud&quot; en el menú principal.Completa los campos requeridos, como:Monto solicitado: Ingresa el valor del préstamo.Período: Selecciona el número de meses (24, 36, 48, etc.).Empleado: Selecciona el empleado que solicita el préstamo.Una vez completados todos los datos, haz clic en el botón &quot;Guardar Solicitud&quot; para registrar la solicitud.Recibirás una notificación confirmando que la solicitud ha sido creada." wrapText="true" />
